# 64kdemo

./: .gitignore  README.md  cleanup.bat
vulkan-demo/: CMakeLists.txt  Makefile  Makefile.manual  Makefile.win  README.md  TODO.md  build.bat  build_with_crinkler.bat  compile.bat  shader.frag.spv
vulkan-demo/docs/: communications.md
vulkan-demo/shaders/: shader.frag  shader.frag.min  shader.vert  shader.vert.min
vulkan-demo/src/: audio_synthesis.c  audio_synthesis.h  main.c  miniaudio_minimal.h  shader_loader.c  shader_loader.h  shadertoy_compat.c  shadertoy_compat.h  sync_system.c  sync_system.h  vulkan_setup.c  vulkan_setup.h
